# algorithmic-trading-bot

./: .gitignore  CLAUDE.md  README.md  SETUP_COMPLETE.md  TODO.md  TRADING_GUIDE.md  config.py  download_report_20250724_153059.yaml  download_report_20250724_153131.yaml  example.py  example_train.py  executive-summary.md  interactive_walkthrough.py  investigate_api.py  main.py  pyproject.toml  quantum_sentiment.db  requirements-ml.txt  requirements.txt  simple_examples.py  test_apis.py  test_database.py  test_main_quick.py  test_ml_models.py  test_ml_simple.py  test_reddit_init.py  test_reddit_real_data.py  test_sentiment_pipeline.py  test_trading_engine.py  train_professional.py  verify_integration.py
config/: config.example.yaml  config.yaml  download_config.example.yaml  download_config.yaml
data/: quantum.db
docs/guides/: getting_started.md  quick_start.md  risk_management.md  system_architecture.md  trading_strategies.md
scripts/: check_status.py  demo_reddit_deep_analysis.py  detailed_component_tests.py  download_historical_data.py  manual_test_sentiment.py  test_phase_3_1_sentiment.py  test_portfolio_optimization.py  test_reddit_api.py  test_reddit_deep_analysis.py  test_risk_engine.py  train_models.py  validate_config.py  verify_setup.py  view_data.py
simple_demo/lstm/: checkpoint_epoch_30.pt
src/: config.py  main.py
src/broker/: __init__.py  account_monitor.py  alpaca_broker.py  order_manager.py  position_tracker.py
src/config/: __init__.py  config_manager.py
src/data/: __init__.py  alpaca_client.py  alpha_vantage_client.py  crypto_client.py  data_fetcher.py  data_interface.py  market_data_manager.py  reddit_client.py
src/database/: __init__.py  database.py  models.py  schema.py
src/execution/: __init__.py  execution_tracker.py  market_impact.py  order_strategies.py  orderbook_analyzer.py  slippage_predictor.py  smart_router.py
src/features/: __init__.py  feature_pipeline.py  sentiment.py  technical.py
src/models/: __init__.py
src/models/base/: __init__.py  base_model.py  classification_model.py  ensemble_model.py  time_series_model.py
src/models/cnn/: __init__.py  chart_pattern_cnn.py
src/models/ensemble/: __init__.py  stacked_ensemble.py
src/models/lstm/: __init__.py  price_lstm.py
src/models/transformers/: __init__.py  finbert.py
src/models/xgboost/: __init__.py  market_regime_xgboost.py
src/portfolio/: __init__.py  black_litterman.py  markowitz.py  rebalancer.py  regime_allocator.py  risk_parity.py
src/risk/: __init__.py  correlation_manager.py  drawdown_controller.py  position_sizer.py  risk_engine.py  stop_loss_manager.py
src/sentiment/: __init__.py  news_aggregator.py  reddit_analyzer.py  sentiment_fusion.py  unusual_whales_analyzer.py
src/training/: __init__.py  model_persistence.py  model_validator.py  performance_monitor.py  training_pipeline.py  walk_forward_optimizer.py
src/universe/: __init__.py  dynamic_discovery.py
src/validation/: __init__.py  data_cleaner.py  data_validator.py
strategies/: __init__.py  base_strategy.py  moving_average_strategy.py
tests/: debug_scraping.py  show_real_data.py  simple_test.py  test_apis.py  test_configs_only.py  test_models.py  test_models_comprehensive.py  test_real_data.py  test_real_scraping.py
walkthroughs/: interactive_walkthrough.py  simple_examples.py  trading_101_for_beginners.py
walkthroughs/simple_demo/lstm/: checkpoint_epoch_0.pt
