[project]
name = "quantumsentiment"
version = "1.0.0"
description = "Institutional-Grade AI Trading System with Multi-Source Sentiment Analysis"
authors = [
    { name = "QuantumSentiment Team", email = "team@quantumsentiment.ai" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["trading", "ai", "sentiment", "quant", "finance"]

dependencies = [
    # Core dependencies from requirements.txt
    "alpaca-trade-api>=3.1.0",
    "praw>=7.7.0",
    "tweepy>=4.14.0",
    "alpha-vantage>=2.3.1",
    "requests>=2.31.0",
    "aiohttp>=3.8.0",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "ta-lib>=0.4.26",
    "pandas-ta>=0.3.14b",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "redis>=4.6.0",
    "alembic>=1.12.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "structlog>=23.0.0",
    "sentry-sdk>=1.32.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "cloudscraper>=1.2.71",
    "schedule>=1.2.0",
    "python-telegram-bot>=20.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]

[project.optional-dependencies]
ml = [
    # ML dependencies from requirements-ml.txt
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "torchaudio>=2.1.0",
    "transformers>=4.35.0",
    "tokenizers>=0.14.0",
    "datasets>=2.14.0",
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.1.0",
    "catboost>=1.2.0",
    "optuna>=3.4.0",
    "hyperopt>=0.2.7",
    "statsmodels>=0.14.0",
    "arch>=6.2.0",
    "pykalman>=0.9.5",
    "hurst>=0.0.5",
    "ta>=0.10.2",
    "cvxpy>=1.4.0",
    "pyportfolioopt>=1.5.0",
    "quantlib>=1.32",
    "featuretools>=1.27.0",
    "tsfresh>=0.20.0",
    "shap>=0.43.0",
    "lime>=0.2.0.1",
    "eli5>=0.13.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.17.0",
    "bokeh>=3.3.0",
    "memory-profiler>=0.61.0",
    "psutil>=5.9.0",
    "joblib>=1.3.0",
]

dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.9.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "notebook>=7.0.0",
]

[project.scripts]
quantum = "quantumsentiment.main:main"
quantum-train = "quantumsentiment.scripts.train_models:main"
quantum-backtest = "quantumsentiment.scripts.backtest:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.9.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py310"
line-length = 88
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
    "alpaca_trade_api.*",
    "praw.*",
    "tweepy.*",
    "alpha_vantage.*",
    "ta.*",
    "quantlib.*",
]
ignore_missing_imports = true